# python-powercalc

./: README.md  pyproject.toml
powercalc_engine/: __init__.py  cli.py  engine.py  exceptions.py  loader.py  model_json.py  models.py
powercalc_engine/lut/: __init__.py  base.py  brightness.py  color_temp.py  effect.py  hs.py  interpolation.py
powercalc_engine/remote/: __init__.py  github_client.py  github_store.py  manifest.py  models.py
tests/: conftest.py  test_aliases_and_linked_profile.py  test_base_helpers.py  test_engine.py  test_interpolation.py  test_lut_brightness.py  test_lut_color_temp.py  test_lut_effect.py  test_lut_hs.py  test_model_json_and_loader.py  test_remote.py  test_standby_detection.py
